Fix: table annotation fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=jpa
-spring.datasource.url = jdbc:postgresql:localhost:8080/bookstore-jpa
+spring.datasource.url = jdbc:postgresql:localhost:5432/bookstore-jpa
 spring.datasource.username=postgres
-spring.datasource.password=banco123
+spring.datasource.password=Admin@123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation=true
 spring.jpa.show-sql=true
